--- a/src/popup/style.scss
+++ b/src/popup/style.scss
@@ -1,3 +1,13 @@
 * {
     margin: 0px;
+    padding: 0px;
+}
+
+
+.popup-page {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
 }
