--- a/src/popup/style.scss
+++ b/src/popup/style.scss
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: row-reverse;
 }
+.mantine-Table-td > p {
+    font-size: 14px;
+}
 
 .padded { padding: 10px; }
 
